src/objects/Glxy_FundingPayment__c.object
<CustomObject>
    <fields>
        <fullName>Budget_ID__c</fullName>
        <label>Budget ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedAnnualAmount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FundingPaymentID__c</fullName>
        <externalId>true</externalId>
        <label>Funding Payment ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PaymentTypeDescription__c</fullName>
        <label>Payment Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Description_Code__c</fullName>
        <label>Payment Description Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Description__c</fullName>
        <label>Payment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <formula>EstimatedAnnualAmount__c * WithHoldMonths__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Annual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <referenceTo>Glxy_Transaction__c</referenceTo>
        <relationshipLabel>Funding Payments</relationshipLabel>
        <relationshipName>Funding_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WithHoldMonths__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Withhold Number of Months</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Funding Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Funding Payment ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>